--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -599,3 +599,28 @@
               </div>
 
 </div>
+
+
+<div class="spacer-139px"></div>
+
+<div class="pagination-container">
+  <div class="spacer-25px"></div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <div class="pagination-button pagination-button-left">
+          <i class="fal fa-angle-left"
+            ><label class="pagination-label" for="">Last Program</label></i>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <div class="pagination-button pagination-button-right float-right">
+          <label class="pagination-label" for="">Next Program</label
+          ><i class="fal fa-angle-right"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
