--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -35,6 +35,7 @@
                         </div>
 
                         <div class="col-sm-3">
+                          <div class="spacer-26px"></div>
                           <label class="advanced" onclick="changeVisibility()" for=""> Advanced</label>
                        </div>
 
@@ -76,6 +77,8 @@
                                    <a onclick="changeData_pre()" class="dropdown-item dropdown-item-client">Dauten, Dale</a>
                                  </div>
                             </div>
+
+                            <div class="spacer-30px"></div>
 
 						</div>
 
