--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="col-sm-3">
-                          <label class="advanced" onclick="changeVisibility()" for=""> Advanced</label>
+                          <label class="advanced" (click)= "clickAdvanced()" for=""> Advanced</label>
                        </div>
 
 
@@ -138,9 +138,8 @@
 
                         </div><!--  end of row -->
 
-
-                        <div id="myDIV" style="display: none" class="row">
-
+                        <div id="myDIV" style="display: block" class="row" *ngIf="Visible">
+                          
                           <div class="spacer-24px"></div>
 
                           <div class="col-sm-6">
@@ -195,19 +194,6 @@
                                         </div>
 
                           </div>
-
-                        <script>
-
-                          function changeVisibility(){
-                              var x = document.getElementById("myDIV");
-                                      if (x.style.display === "block") {
-                                          x.style.display = "none";
-                                      } else {
-                                          x.style.display = "block";
-                                      }
-                              }
-
-                      </script>
 
                       <div class="spacer-30px"></div>
 
